fix block spacing for better theme compatibility

--- a/client/components/poll/style.scss
+++ b/client/components/poll/style.scss
@@ -285,7 +285,6 @@ input[type="radio"].crowdsignal-forms-poll__input {
 
 	.wp-block-button.crowdsignal-forms-poll__block-button {
 		margin: 0;
-		line-height: 0;
 	}
 }
 
